--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
 	<h2>system/main</h2>
+	<a href="${request.contextPath}/system/userInfo/get/${Session.userID}/authentication_1">验证</a>
+	<a href="${request.contextPath}/system/houseInfo/housingPublish_1">发布</a>
 </body>
 </html>
