--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/authentication_1.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/authentication_1.html
@@ -62,14 +62,14 @@
 					msg += o.attr('msg') + '\n';
 				}
 			});
-			$("input[type='file']").each(function(index) {
+/* 			$("input[type='file']").each(function(index) {
 				if ($(this)[0].files.length == 0) {
 					isPass = false;
 				} else
 					isPass = true;
 			});
 			if (!isPass)
-				return alert(msg + '请选择证件照片\n');
+				return alert(msg + '请选择证件照片\n'); */
 
 			var fd = new FormData($('#aaxx')[0]);
 
@@ -116,6 +116,13 @@
 			<#assign jsonX=userInfo.idCardImage?eval /> 
 		</#if>
 	 </#if>
+	 
+	
+	 
+	 
+	<#assign text=userInfo.info />
+	<#assign data=text?eval />
+	 
 	<div id="header">
 		<a href="javascript:history.go(-1);" class="l_ico ico_back"></a>
 		<span class="m_text">实名验证</span>
@@ -132,10 +139,10 @@
 			<div class="myinfo2">
 				<ul>
 					<li><span class="fl">真实姓名：</span> <span class="fl">
-							<input type="text" value="${userInfo.reallyName?default('')}" class="inputstyle f_gray2" placeholder="请输入证件上的真实姓名" name="reallyName" v="true" msg="请输入真实姓名">
+							<input type="text" value="${data.name!''}" class="inputstyle f_gray2" placeholder="请输入证件上的真实姓名" name="name" v="true" msg="请输入真实姓名">
 						</span></li>
 					<li><span class="fl">身份证号：</span> <span class="fl">
-							<input value="${userInfo.idCard?default('')}" type="text" class="inputstyle f_gray2" placeholder="请输入身份证号码" name="idCard" v="true" msg="请输入有效身份证号码" test='/^(\d{15}$|^\d{18}$|^\d{17}(\d|X|x))$/'>
+							<input value="${data.idCard!''}" type="text" class="inputstyle f_gray2" placeholder="请输入身份证号码" name="idCard" v="true" msg="请输入有效身份证号码" test='/^(\d{15}$|^\d{18}$|^\d{17}(\d|X|x))$/'>
 						</span></li>
 				</ul>
 			</div>
