--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
@@ -80,10 +80,10 @@ a.btn_login {
 				<img src="${request.contextPath}/resource/images/logo.png" />
 			</div>
 			<div class="login_input">
-				<input name="phone" type="text" value="用户名/手机号码">
+				<input name="phone" type="text" placeholder="用户名/手机号码">
 			</div>
 			<div class="login_input">
-				<input type="password" value="密码" name="password">
+				<input type="password" placeholder="密码" name="password">
 			</div>
 			<div>
 				<a href="javascript:void(0);" class="btn_login" id="submit">登 录</a>
