--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/authentication_1.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/authentication_1.html
@@ -149,7 +149,7 @@
 			<div class="picturebox  mt15">
 				<div class="imgbox">
 					<div class="oneside2">
-						<a href="">
+						<a href="javascript:voide(0);">
 							<input type="file" name="file1" style="float: left; position: absolute; z-index: 100; opacity: 0; filter: alpha(opacity = 0);" accept="image/*" display="upimg0">
 							<#if jsonX??>
 								<img alt="+" src="${(jsonX[0].src)???string(request.contextPath+'/resource/upload/idcard/'+jsonX[0].src,'')} " width="100%;" height="100%;" id="upimg0">
@@ -163,7 +163,7 @@
 				</div>
 				<div class="imgbox">
 					<div class="oneside2">
-						<a href="">
+						<a href="javascript:voide(0);">
 							<input type="file" name="file2" style="float: left; position: absolute; z-index: 100; opacity: 0; filter: alpha(opacity = 0);" accept="image/*" display="upimg1">
 							<#if jsonX??>
 								<img alt="+" src="${(jsonX[1].src)???string(request.contextPath+'/resource/upload/idcard/'+jsonX[1].src,'')}" width="100%" height="100%" id="upimg1">
